--- a/test/index.html
+++ b/test/index.html
@@ -16,7 +16,7 @@
 <pre id="log"></pre>
 
 <script type="module">
-import createModule from "./fun.js";
+import createModule from "../output/fun.js";
 let Module, inputFile=null;
 const log=msg=>document.getElementById("log").textContent+=msg+"\n";
 
